# reader3

./: README.md  pyproject.toml  server.py  summarizer.py
templates/: reader.html
