[project]
name = "reader3"
version = "0.1.0"
description = "Simple EPUB reader web app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ebooklib>=0.20",
    "fastapi>=0.121.2",
    "jinja2>=3.1.6",
    "uvicorn>=0.38.0",
    "langchain>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.1.0",
]
